# pyinaturalist-open-data

./: .gitignore  HISTORY.md  README.md  alembic.ini  pyproject.toml  setup.cfg
.github/: pre-commit.yml
.github/workflows/: build.yml
alembic/: env.py
alembic/versions/: 93f4f5e50ecc_init.py
docs/: pynat-demo.cast  pynat-demo.md
pyinaturalist_open_data/: __init__.py  cli.py  constants.py  database.py  download.py  importer.py  progress.py
pyinaturalist_open_data/models/: __init__.py  base.py  observation.py  photo.py  taxon.py  user.py
