[tool.poetry]
name = "pyinaturalist-open-data"
version = "0.1.0"
description = "Python utilities for working with inaturalist-open-data"
authors = ["'Jordan Cook'"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
appdirs = "^1.4"
boto3 = "^1.17"
pyinaturalist = "~0.12.0"
requests-cache = "~0.6.3"
rich = ">=10.0"

[tool.poetry.dev-dependencies]
black = "21.5b0"
isort = "^5.8"
mypy = "^0.812"
flake8 = "^3.9"

[tool.poetry.scripts]
inat = 'pyinaturalist_open_data.cli:inat'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
skip-string-normalization = true
line-length = 100

[tool.isort]
profile = 'black'
line_length = 100
skip_gitignore = true
known_first_party = ['test']
skip = ['pyinaturalist_open_data/models/__init__.py']                                       
